--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes2</h1>
+    <h2>This is the second version b'cuz I deleted and restarted from v1</h2>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
 </body>
 </html>
