--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Odin Recipes2</h1>
     <h2>This is the second version b'cuz I deleted and restarted from v1</h2>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+    <li><a href="recipes/hotpockets.html">Hot Pockets Recipe</a></li>
+    <li><a href="recipes/chicken-sandwich.html">Chicken Sandwich Recipe</a></li>
+</ul>
 </body>
 </html>
